# blake3

./: .gitignore  Makefile.toml  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/broodroosterdev/blake3/: Blake3Plugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/broodroosterdev/blake3_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/test/: widget_test.dart
ios/: blake3.podspec
ios/Classes/: Blake3Plugin.h  Blake3Plugin.m  SwiftBlake3Plugin.swift
lib/: blake3.dart  ffi.dart
linux/: CMakeLists.txt  blake3_plugin.cc
linux/include/blake3/: blake3_plugin.h
native/blake3-ffi/: Cargo.toml  binding.h  build.rs
native/blake3-ffi/src/: lib.rs
