[package]
name = "blake3-ffi"
version = "0.1.0"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"

[lib]
name = "blake3_ffi"
crate-type = ["rlib"]

[dependencies]
blake3 = "0.3.7"
tokio = { version = "1.0.1", features = ["rt-multi-thread"] }
ffi_helpers = "0.2"
allo-isolate = "0.1.6"
lazy_static = "1.4"
futures = "0.3.8"

[build-dependencies]
cbindgen = "0.14.3"
dart-bindgen = "0.1.7"